@@ -3,6 +3,10 @@ X3 ChangeLog
 
 2009-10-05  Henrik Stuart <evilnet@hstuart.dk>
 
+	* src/mod-python.c: Generalise cmd_run to handle arbitrary statements.
+
+2009-10-05  Henrik Stuart <evilnet@hstuart.dk>
+
 	* src/main-common.c: Initialise opserv before other services.
 
 2009-09-22  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
